<resources>
    <string name="app_name">Teladoc Assignment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_words_count">WordsCountActivity</string>
    <string name="word">Word</string>
    <string name="count">Count</string>
    <string name="romeo_and_juliet">Romeo and Juliet</string>
    <string name="twist_and_shout">Twist and Shout</string>
    <string name="title_activity_twist">TwistActivity</string>
    <string name="search">Search</string>
    <string name="alphabetically">Alphabetically</string>
    <string name="length">Length</string>
    <string name="sort_by">Sort by:</string>
</resources>